pushing what I have to share