@@ -1,12 +1,15 @@
 package DynamicWebBrowser.protocols;
 
+import java.io.BufferedReader;
 import java.io.ByteArrayOutputStream;
 import java.io.DataInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.PrintStream;
+import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.Socket;
 import java.net.URI;
@@ -26,47 +29,56 @@ import java.util.logging.Logger;
  */
 public class Http implements Protocol {
 
-    private Socket server;
-    private String host;
-    private int port;
-    private PrintStream writer;
-    private DataInputStream inputStream;
-    private ObjectInputStream is = null;
-    private ObjectOutputStream os = null;
-
-    public Http(String host, int port) {
-        this.host = host;
-        this.port = port;
-    }
-
     /**
      * Loads the class from server
      *
      * @param protocolName
      * @return null if protocol doesn't exist
      */
+//    public String execute(URI uri) {
+//
+//        URL ur = null;
+//        try {
+//            ur = new URL(uri.getScheme(), uri.getAuthority(), 80, uri.getPath());
+//        } catch (MalformedURLException ex) {
+//            System.out.println("the uri is bad right before trying to execute");
+//            Logger.getLogger(Http.class.getName()).log(Level.SEVERE, null, ex);
+//        }
+//        URLConnection conn = null;
+//        try {
+//            conn = ur.openConnection();
+//        } catch (IOException ex) {
+//            Logger.getLogger(Http.class.getName()).log(Level.SEVERE, null, ex);
+//        }
+//        InputStream is = null;
+//        try {
+//            is = conn.getInputStream();
+//        } catch (IOException ex) {
+//            Logger.getLogger(Http.class.getName()).log(Level.SEVERE, null, ex);
+//        }
+//        String foo = new Scanner(is).useDelimiter("\\A").next();
+//        System.out.println(foo);
+//        return foo;
+//    }
+//    
     public String execute(URI uri) {
-
-        URL ur = null;
+        URL url;
+        HttpURLConnection conn;
+        BufferedReader rd;
+        String line;
+        String result = "";
         try {
-            ur = new URL(uri.getAuthority());
-        } catch (MalformedURLException ex) {
-            Logger.getLogger(Http.class.getName()).log(Level.SEVERE, null, ex);
+            url = uri.toURL();
+            conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("GET");
+            rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+            while ((line = rd.readLine()) != null) {
+                result += line;
+            }
+            rd.close();
+        } catch (Exception e) {
+            e.printStackTrace();
         }
-        URLConnection conn = null;
-        try {
-            conn = ur.openConnection();
-        } catch (IOException ex) {
-            Logger.getLogger(Http.class.getName()).log(Level.SEVERE, null, ex);
-        }
-        InputStream is = null;
-        try {
-            is = conn.getInputStream();
-        } catch (IOException ex) {
-            Logger.getLogger(Http.class.getName()).log(Level.SEVERE, null, ex);
-        }
-        String foo = new Scanner(is).useDelimiter("\\A").next();
-        System.out.println(foo);
-        return foo;
+        return result;
     }
 }
